QtOrganizer: fix QML enum property types

Fix QML enum property types bug that is similar
to QTBUG-35276 "Qt Contacts 5.0 Filter:
Unable to assign int to [unknown property type]"

The problematic code leads to QML errors like
"QMetaProperty::read: Unable to handle unregistered datatype
'QDeclarativeOrganizerItemType::ItemType' for
property 'QtOrganizer::QDeclarativeOrganizerEvent::itemType"

Change-Id: I6b128f7cbee0075708f0985d582a56b12fbe3ed1
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>